Fix dark mode colors

--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -6,7 +6,7 @@ body{
   footer {
     background: $bg_dark;
     color: $item_dark;
-    a, svg {color: $highlight;}
+    a, svg {color: $highlight_light;}
     p, h1, h2, h3, h4, h5, h6 {color: $item_dark;}
     .sponsors{img{filter: brightness(1.75);}}
     hr {background-color: lighten($bg_dark, 5%);}
@@ -19,9 +19,11 @@ body{
 body.dark {
   footer {
     background: $bg_light;
-    a, svg {color: $highlight;}
+    a, svg {color: $highlight_light;}
     p, h1, h2, h3, h4, h5, h6 {color: $item_light;}
     .sponsors{img{filter: brightness(0.25);}}
+    hr {background-color: darken($bg_light, 5%);}
+    .credits{p{color: lighten($item_light, 50%);}}
   }
 }
 
